operators/subscription/vault/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: vault
  ports:
  - port: 8200
    targetPort: 8200
