operators/subscription/vault/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  to:
    kind: Service
    name: vault
  port:
    targetPort: 8200
  tls:
    termination: edge
